testdata/zkc/invalid/bitwise_invalid_08.zkc
//error:3:7-9:cannot use u8 as u4 in assignment
fn f(x:u8) -> (r:u4) {
  r = ~x
  return
}
